# tinybit

./: Cargo.toml  LICENSE  README.md  newfile
examples/: simple.rs
src/: .render.rs.swp  camera.rs  char_buffer.rs  entities.rs  lib.rs  pixelbuffer.rs  render.rs  ui.rs  viewport.rs  widgets.rs  world.rs
src/events/: mod.rs  term.rs
